# UNIX_inter_process_communication

./: .gdb_history  .gitignore  CMakeLists.txt  README.md  example.cpp  readme
examples/: a.out  main.cpp  tuple_types_inheritance.cpp  tuple_types_variant_only.cpp
include/: client.hpp  common.hpp  deserializer.hpp  dummy.hpp  linda_common.hpp  linda_functions.hpp  linda_helpers.hpp  linda_spec.hpp  message.hpp  message_buffer.hpp  parser.hpp  serializer.hpp  server.hpp  serverDB.hpp  server_db.hpp  service_thread.hpp  tuple.hpp
include/linda_functions/: linda_functions.hpp  linda_helpers.hpp
include/linda_server/: linda_server.hpp
include/uuid_maker/: uuid_maker.hpp
src/: client.cpp  client_main.cpp  deserializer.cpp  dummy.cpp  linda_common.cpp  linda_functions.cpp  linda_helpers.cpp  message_buffer.cpp  parser.cpp  serializer.cpp  server.cpp  serverDB.cpp  server_db.cpp  server_main.cpp  service_thread.cpp  tuple.cpp  uuid_maker.cpp
src/linda_functions/: linda_functions.cpp  linda_helpers.cpp
src/linda_server/: linda_server.cpp
src/uuid_maker/: uuid_maker.cpp
test/: CMakeLists.txt
test/apps/: client_main.cpp  hello_lindux.cpp  server_main.cpp
test/integration/: multiple_clients.sh
test/integration/client_connect_immediately_disconnect/: run.sh
test/integration/input_removing_tuples/: client1.sh
test/integration/read_after_input/: input.txt  run.sh
test/integration/read_after_write/: descr.txt  input.txt  run.sh
test/integration/wait_with_input/: client1.sh
test/integration/wait_with_read/: client1.sh
test/unit/: parser.cpp  serialization.cpp  tuple.cpp
